# gradido-blockchain-js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.cjs  index.d.ts  jest.config.js  package.json  tsconfig.json
example/: index.js
lib/: index.d.ts  index.mjs
src/: GradidoTransactionBuilder.i  GradidoUnit.i  MemoryBlock.i  Protocol.i  TransactionBodyBuilder.i  data.i  gradido-blockchain-js.i  gradido-blockchain.i  types.i
swig/: gradido-blockchain-js.cjs  gradido-blockchain-js.cxx  gradido-blockchain-js.d.ts  gradido-blockchain-js.h  gradido-blockchain-js__exports_Abstract.cxx  gradido-blockchain-js__exports_AuthenticatedEncryption.cxx  gradido-blockchain-js__exports_Block.cxx  gradido-blockchain-js__exports_CommunityFriendsUpdate.cxx  gradido-blockchain-js__exports_CommunityRoot.cxx  gradido-blockchain-js__exports_ConfirmedTransaction.cxx  gradido-blockchain-js__exports_ConstBlockPtrComparator.cxx  gradido-blockchain-js__exports_DeferredRedeemedTransferPair.cxx  gradido-blockchain-js__exports_Filter.cxx  gradido-blockchain-js__exports_FilterBuilder.cxx  gradido-blockchain-js__exports_GradidoCreation.cxx  gradido-blockchain-js__exports_GradidoDeferredTransfer.cxx  gradido-blockchain-js__exports_GradidoTransaction.cxx  gradido-blockchain-js__exports_GradidoTransactionBuilder.cxx  gradido-blockchain-js__exports_GradidoTransfer.cxx  gradido-blockchain-js__exports_GradidoUnit.cxx  gradido-blockchain-js__exports_InMemory.cxx  gradido-blockchain-js__exports_InMemoryBlockchain.cxx  gradido-blockchain-js__exports_InMemoryBlockchainProvider.cxx  gradido-blockchain-js__exports_InMemoryProvider.cxx  gradido-blockchain-js__exports_InteractionCalculateAccountBalance.cxx  gradido-blockchain-js__exports_InteractionDeserialize.cxx  gradido-blockchain-js__exports_InteractionSerialize.cxx  gradido-blockchain-js__exports_InteractionToJson.cxx  gradido-blockchain-js__exports_InteractionValidate.cxx  gradido-blockchain-js__exports_KeyPairEd25519.cxx  gradido-blockchain-js__exports_KeyPairEd25519Ex.cxx  gradido-blockchain-js__exports_MemoryBlock.cxx  gradido-blockchain-js__exports_MemoryBlocks.cxx  gradido-blockchain-js__exports_Pagination.cxx  gradido-blockchain-js__exports_Passphrase.cxx  (+16 more)
test/: enumToString.test.ts  (+6 more)
(+39 files in other folders)
